Changes after KPresenter 1.3
============================
Fixes:
- Fixed possible crash in presentation mode if not all slides are shown
- Fixed take tmp objects for redrawing in effect from the correct page
- Fixed show the duration for the correct page if not all slides are shown
- Fixed crash in infinite loop presentation mode when first slide is not shown
- Fixed redrawing of lines in drawing mode in case of a repaint event
- Fixed aligning of rotated lines and line with pen.width() > 1
- Fixed that the width/height of an rotated object could be negative
- Fixed copy and paste when one pic is in the copied objects

Changes:
- If a page is shown more than once during a presentation add the time for 
  the duration instead of showing only the last duration.
- Use kspell2
- Now PresSpeed is into each page
- Now PageUp/PageDown during presentation go to beginning of the next/previous slide
- Each object effect can have it's own speed now

Changes after KPresenter 1.3 RC1
================================
- during a presentation variables on the sticky page were not updated (#67515)


Changes after KPresenter 1.3 beta 4
===================================
Fixes:
- Fixed When resizing a frame it does not snap to the grid (#63032)
- Fixed after resize/undo size of object is not the same
- Fixed after move/undo position of object is not the same
- Fixed resizing of poly line objects
- Fixed after reload of some objects moved up a little bit
- Fixed moving with key left used y grid
- Fixed header/footer moved in undo

Changes after KPresenter 1.3 beta 3
===================================
Fixes:
- Fixed cursor not blinking in some cases
- Fixed "blinking cursor erases formatting characters" bug
- "Adjust object to contents" works as intended now
- Purpose of the 'Notebar' is unknown (#63037)
- kpresenter crashed when I tried to insert the variable
  "section title" (#61735)
- large footer from kpresenter 1.2.1 will crash kpresenter
  (#61449)